--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,13 @@ project(kip-stack)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -ggdb")
 
-add_executable(main
-               src/tuntap.c)
+include_directories(${CMAKE_SOURCE_DIR}/include)
 
+add_executable(main
+               src/main.c
+               src/tuntap.c
+               src/arp.c
+               src/netdev.c
+               src/eth.c
+               src/utils.c
+               )
